--- a/exchangeFront/exchangeFront.Client/Pages/Counter.razor
+++ b/exchangeFront/exchangeFront.Client/Pages/Counter.razor
@@ -9,7 +9,8 @@
 
 <MudText Typo="Typo.h3" GutterBottom="true">Counter</MudText>
 <MudText Class="mb-4">Current count: @currentCount</MudText>
-<MudButton Color="Color.Primary" Variant="Variant.Filled" @onclick="IncrementCount">Click me</MudButton>
+<MudButton Color="Color.Primary" Variant="MudBlazor.Variant.Filled" @onclick="IncrementCount">Click me</MudButton>
+<RadzenButton Text="Radzen button test" Click="IncrementCount"></RadzenButton>
 
 @code {
     private int currentCount = 0;
