--- a/exchangeFront/exchangeFront/Components/App.razor
+++ b/exchangeFront/exchangeFront/Components/App.razor
@@ -8,6 +8,9 @@
 	
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="_content/Radzen.Blazor/css/material-base.css">
+    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
+    <script src="_content/Radzen.Blazor/Radzen.Blazor.js?v=@(typeof(Radzen.Colors).Assembly.GetName().Version)"></script>
 	
 	
     <link rel="icon" type="image/png" href="favicon.ico" />
